Fix overflow css for routing popup

--- a/frontend/src/Routing.css
+++ b/frontend/src/Routing.css
@@ -71,7 +71,6 @@
     margin: 15% auto;
     padding: 20px;
     border-radius: 10px;
-    height: 8%;
     width: 50%;
     text-align: center;
     align-items: center;
